decafexpr/output/test/5blocks-fcall.err
output prefix: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall
llvmas: /usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as
llc: /usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/answer/decafexpr
stdlib: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/answer/decaf-stdlib.c
generating llvm code:/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/answer/decafexpr ... ok
; ModuleID = 'C'

define i32 @main() {
entry:
  %main = alloca i32
  %y = alloca i32
  %x = alloca i32
  %x1 = alloca i32
  %x2 = alloca i32
  %x3 = alloca i32
  %x4 = alloca i32
}

define i32 @main.1() {
entry:
  ret i32 0
}
assembling to bitcode:/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm" -o "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm.bc" ... failed (1)
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: /Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm:12:1: error: expected instruction opcode
}
^
converting to native code:/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llc "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm.bc" -o "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm.s" ... ok
linking:gcc -o "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm.exec" "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm.s" "/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/answer/decaf-stdlib.c" ... ok
running:/Users/Jerry/Develop/SFU/compiler/DecafCompiler/decafexpr/output/test/llvm/5blocks-fcall.llvm.exec ... ok
